# disks

./: .fvmrc  .gitignore  CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  build.yaml  pubspec.yaml
.github/actions/setup/: action.yml
.github/workflows/: build.yml  default.yml  main.yml  test.yml
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: disks_desktop.dart
lib/src/exceptions/: unsupported_platform_exception.dart
lib/src/linux/: lsblk.dart
lib/src/models/: disk.dart
lib/src/repositories/: disks_repository.dart
macos/: disks_desktop.podspec
macos/Classes/: DeviceManager.swift  Disk.swift  DisksDesktopPlugin.swift
test/linux/: disks_test.dart  lsblk.json
test/macos/: disks_test.dart  method_channel.json
test/windows/: disks_test.dart  method_channel.json
windows/: CMakeLists.txt  disks_desktop_plugin.cpp
windows/include/disks_desktop/: disks_desktop_plugin.h  drivelist.cpp  drivelist.hpp  list.cpp  list.hpp
